# FactorVAE---Brazillian-Market

./: .gitignore  README.md  TUTORIAL.txt  config.yaml  evaluation_framework_guide.md  guia_mudancas_finais.md  pyproject.toml
benchmarks/: gru.py  linear_model.py  mlp.py  momentum.py  run_benchmarks.py
checkpoints/: epoch=0-step=200-v1.ckpt  epoch=0-step=200-v10.ckpt  epoch=0-step=200-v11.ckpt  epoch=0-step=200-v12.ckpt  epoch=0-step=200-v13.ckpt  epoch=0-step=200-v14.ckpt  epoch=0-step=200-v15.ckpt  epoch=0-step=200-v16.ckpt  epoch=0-step=200-v17.ckpt  epoch=0-step=200-v18.ckpt  epoch=0-step=200-v19.ckpt  epoch=0-step=200-v2.ckpt  epoch=0-step=200-v20.ckpt  epoch=0-step=200-v21.ckpt  epoch=0-step=200-v22.ckpt  epoch=0-step=200-v23.ckpt  epoch=0-step=200-v24.ckpt  epoch=0-step=200-v25.ckpt  epoch=0-step=200-v3.ckpt  epoch=0-step=200-v4.ckpt  epoch=0-step=200-v5.ckpt  epoch=0-step=200-v6.ckpt  epoch=0-step=200-v7.ckpt  epoch=0-step=200-v8.ckpt  epoch=0-step=200-v9.ckpt  epoch=0-step=200.ckpt
configs/: baseline.yaml  macro_concat.yaml
scripts/: backtest.py  build_features.py  evaluate.py  plot_prior_posterior.py  plot_training_curves.py  robustness_holdout.py  train.py
tests/: conftest.py  test_backtest.py  test_distributions.py  test_evaluate_output_schema.py  test_factor_decoder.py  test_factor_encoder.py  test_factor_predictor.py  test_factorvae_integration.py  test_feature_extractor.py  test_inference.py  test_losses.py  test_metrics.py  test_no_lookahead.py  test_portfolio_layer.py  test_real_dataset.py  test_returns_bounds.py  test_training_step.py
(+43 files in other folders)
